Wed Jun 13 02:16:59 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* main.c (option_apcs_softfloat, set_option_apcs_softfloat): Remove.
	(asasm_help): Remove -soft-float and -hard-float options.
	* main.h (option_apcs_softfloat): Remove.
	* area.c (Area_ApplyAPCSOption): Remove option_apcs_softfloat use.
	* m_fpe.c (CheckFPUsageIsAllowed): Likewise.
	* output.c (Output_ELF): Likewise.
	* area.h (AREA_SOFTFLOAT): Change into AREA_RESERVED31.

Tue Jun 12 23:59:34 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* asm.c (ASM_DefineLabel): Add isMapping parameter.
	* asm.h (ASM_DefineLabel): Likewise.
	* decode.c (decode): Follow ASM_DefineLabel API change.
	* local.c (c_rout): Likewise.
	* area.c (Area_MarkStartAs): Likewise.

Tue Jun 12 23:44:35 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* decode.c (decode): Call ASM_DefineLabel after Area_MarkStartAs.
	* area.c (Area_GetCurrentEntryType): Add. 
	(Area_MarkStartAs): Move setting of SYMBOL_DATUM to...
	* asm.c (ASM_DefineLabel): ...here.	
	* area.h (Area_GetCurrentEntryType): Add.
	* symbol.h (SYMBOL_DATUM): Tune comment.
	* symbol.c (NeedToOutputSymbol): Output KEEP'd area labels as well.

Tue Jun 12 22:08:15 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* symbol.c (NeedToOutputSymbol): Only consider outputing integer
	values which are pure integers.

Tue Jun 12 21:38:35 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* m_cpuctrl.c (ADR_RelocUpdaterCore): Prefer the ADD/SUB variants over
	the MOV/MVN ones.  Emit warning when only MOV/MVN can be used.
	* regression/tests_pass/adr.s: Update and enhance test case.

Tue Jun 12 21:08:20 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* INSTALL: Fix PATH setting for cross-compile case.

Tue Jun 12 20:26:15 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* help_cpu.h (help_cpuImm8s4): Use uint32_t instead of int as
	parameter type and return value.  Renamed to Help_CPUImm8s4.
	(Help_SplitByImm8s4): Use uint32_t types as parameter types and